fixed issue with nav not rendering on mobile devices

--- a/src/css/business.css
+++ b/src/css/business.css
@@ -333,6 +333,7 @@ footer {
   left: 50%;
   transform: translateX(-50%);
   background-color: white;
+  overflow: visible;
 }
 .main-navigation.-legal {
   background-color: transparent;
