--- a/src/css/workforce.css
+++ b/src/css/workforce.css
@@ -839,6 +839,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   background-color: white;
+  overflow: visible;
 }
 .main-navigation.-legal {
   background-color: transparent;
