--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -11,6 +11,7 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: white;
+    overflow: visible;
     &.-legal {
         background-color: transparent;
     }
