--- a/webapp/business/static/css/business.css
+++ b/webapp/business/static/css/business.css
@@ -353,6 +353,7 @@ footer {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   background-color: white;
+  overflow: visible;
 }
 .main-navigation.-legal {
   background-color: transparent;
