--- a/webapp/business/static/css/workforce.css
+++ b/webapp/business/static/css/workforce.css
@@ -869,6 +869,7 @@ section {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   background-color: white;
+  overflow: visible;
 }
 .main-navigation.-legal {
   background-color: transparent;
