--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -329,6 +329,7 @@ section, nav {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   background-color: white;
+  overflow: visible;
 }
 .main-navigation.-legal {
   background-color: transparent;
